Fix crash when waiting for loop device

If for some reason we're unable to get a UDisksObject instance, just bail out
and let udisks_daemon_wait_for_object_sync() continue with the loop and call
the wait_func again after a short break. Hopefully the object we're looking for
will arrive until then.

https://bugs.freedesktop.org/show_bug.cgi?id=72956

Signed-off-by: Martin Pitt <martinpitt@gnome.org>